Fixed weird alignment

--- a/clients/src/App.css
+++ b/clients/src/App.css
@@ -3,7 +3,6 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 body {
@@ -15,3 +14,9 @@ body {
   font-weight: lighter;
   text-transform: uppercase;
 }
+
+@media (max-width: 480px) {
+  .App {
+    align-items: center; 
+  }
+ }
