--- a/clients/src/styles/navbarstyles.css
+++ b/clients/src/styles/navbarstyles.css
@@ -4,6 +4,7 @@
     align-items: center; 
     height: 60px;
     padding: 40px;
+    padding-left: 85px;
   }
 
   .logo img {
